package handlers

import (
	"encoding/hex"
	"fmt"
	"net/http"
	"strconv"
	"strings"

	"github.com/gin-gonic/gin"
	"github.com/weisyn/v1/internal/api/format"
	core "github.com/weisyn/v1/pb/blockchain/block"
	txpb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"go.uber.org/zap"
)

// SPVHandler SPVè½»å®¢æˆ·ç«¯ç«¯ç‚¹å¤„ç†å™¨
// ğŸ”† ç®€åŒ–æ”¯ä»˜éªŒè¯ï¼ˆSimplified Payment Verificationï¼‰
// æ”¯æŒè½»å®¢æˆ·ç«¯éªŒè¯äº¤æ˜“è€Œæ— éœ€ä¸‹è½½å®Œæ•´åŒºå—é“¾
type SPVHandler struct {
	logger        *zap.Logger
	blockQuery    persistence.BlockQuery
	txQuery       persistence.TxQuery
	merkleManager crypto.MerkleTreeManager
	txHashCli     txpb.TransactionHashServiceClient
	blkHashCli    core.BlockHashServiceClient
}

// NewSPVHandler åˆ›å»ºSPVå¤„ç†å™¨
func NewSPVHandler(
	logger *zap.Logger,
	blockQuery persistence.BlockQuery,
	txQuery persistence.TxQuery,
	merkleManager crypto.MerkleTreeManager,
	txHashCli txpb.TransactionHashServiceClient,
	blkHashCli core.BlockHashServiceClient,
) *SPVHandler {
	return &SPVHandler{
		logger:        logger,
		blockQuery:   blockQuery,
		txQuery:      txQuery,
		merkleManager: merkleManager,
		txHashCli:     txHashCli,
		blkHashCli:    blkHashCli,
	}
}

// RegisterRoutes æ³¨å†ŒSPVè·¯ç”±
func (h *SPVHandler) RegisterRoutes(r *gin.RouterGroup) {
	spv := r.Group("/spv")
	{
		spv.GET("/header/:height", h.GetHeaderByHeight)
		spv.GET("/header/hash/:hash", h.GetHeaderByHash)
		spv.GET("/headers/:from/:to", h.GetHeaderRange)
		spv.GET("/tx/:hash/proof", h.GetTxProof)
		spv.GET("/utxo/:outpoint/proof", h.GetUTXOProof)
		spv.GET("/checkpoints", h.GetCheckpoints)
	}
}

// GetHeaderByHeight è·å–æŒ‡å®šé«˜åº¦çš„åŒºå—å¤´
// GET /api/v1/spv/header/:height
// ğŸ”† è½»å®¢æˆ·ç«¯æ ¸å¿ƒï¼šä¸‹è½½åŒºå—å¤´ä»¥éªŒè¯å·¥ä½œé‡è¯æ˜
func (h *SPVHandler) GetHeaderByHeight(c *gin.Context) {
	heightStr := c.Param("height")

	// è§£æé«˜åº¦å‚æ•°
	height, err := strconv.ParseUint(heightStr, 10, 64)
	if err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid height parameter",
			"code":  "INVALID_HEIGHT",
		})
		return
	}

	// æŸ¥è¯¢åŒºå—
	block, err := h.blockQuery.GetBlockByHeight(c.Request.Context(), height)
	if err != nil || block == nil {
		h.logger.Error("Failed to get block by height",
			zap.Uint64("height", height),
			zap.Error(err))
		c.JSON(http.StatusNotFound, gin.H{
			"error": "Block not found",
			"code":  "BLOCK_NOT_FOUND",
		})
		return
	}

	// è®¡ç®—åŒºå—å“ˆå¸Œ
	if h.blkHashCli == nil {
		h.logger.Error("BlockHashService not available")
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Block hash service unavailable",
			"code":  "BLOCK_HASH_SERVICE_UNAVAILABLE",
		})
		return
	}
	bhResp, err := h.blkHashCli.ComputeBlockHash(c.Request.Context(), &core.ComputeBlockHashRequest{Block: block})
	if err != nil || bhResp == nil || len(bhResp.Hash) == 0 {
		h.logger.Error("Failed to compute block hash", zap.Error(err))
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Failed to compute block hash",
			"code":  "BLOCK_HASH_COMPUTE_FAILED",
		})
		return
	}

	// æå–åŒºå—å¤´ä¿¡æ¯ï¼ˆè½»é‡çº§ï¼Œä¸åŒ…å«äº¤æ˜“ä½“ï¼‰
	header := extractBlockHeader(block, bhResp.Hash)

	c.JSON(http.StatusOK, header)
}

// GetHeaderByHash è·å–æŒ‡å®šå“ˆå¸Œçš„åŒºå—å¤´
// GET /api/v1/spv/header/hash/:hash
func (h *SPVHandler) GetHeaderByHash(c *gin.Context) {
	hashStr := c.Param("hash")

	// ç§»é™¤0xå‰ç¼€å¹¶è§£ç 
	if len(hashStr) > 2 && hashStr[:2] == "0x" {
		hashStr = hashStr[2:]
	}

	blockHash, err := hex.DecodeString(hashStr)
	if err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid hash format",
			"code":  "INVALID_HASH",
		})
		return
	}

	if len(blockHash) != 32 {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Hash must be 32 bytes",
			"code":  "INVALID_HASH_LENGTH",
		})
		return
	}

	// æŸ¥è¯¢åŒºå—
	block, err := h.blockQuery.GetBlockByHash(c.Request.Context(), blockHash)
	if err != nil || block == nil {
		h.logger.Error("Failed to get block by hash",
			zap.String("hash", hex.EncodeToString(blockHash)),
			zap.Error(err))
		c.JSON(http.StatusNotFound, gin.H{
			"error": "Block not found",
			"code":  "BLOCK_NOT_FOUND",
		})
		return
	}

	// æå–åŒºå—å¤´ä¿¡æ¯ï¼ˆä½¿ç”¨å·²çŸ¥å“ˆå¸Œï¼‰
	header := extractBlockHeader(block, blockHash)

	c.JSON(http.StatusOK, header)
}

// GetHeaderRange è·å–åŒºå—å¤´èŒƒå›´
// GET /api/v1/spv/headers/:from/:to
// ğŸ”† æ‰¹é‡ä¸‹è½½åŒºå—å¤´ï¼ŒåŠ é€Ÿè½»å®¢æˆ·ç«¯åŒæ­¥
func (h *SPVHandler) GetHeaderRange(c *gin.Context) {
	fromStr := c.Param("from")
	toStr := c.Param("to")

	// è§£æèµ·æ­¢é«˜åº¦
	fromHeight, err := strconv.ParseUint(fromStr, 10, 64)
	if err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid from height",
			"code":  "INVALID_FROM_HEIGHT",
		})
		return
	}

	toHeight, err := strconv.ParseUint(toStr, 10, 64)
	if err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid to height",
			"code":  "INVALID_TO_HEIGHT",
		})
		return
	}

	// é™åˆ¶æœ€å¤§èŒƒå›´ï¼ˆé˜²æ­¢DOSæ”»å‡»ï¼‰
	const maxRange = 100
	if toHeight < fromHeight {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "to height must be >= from height",
			"code":  "INVALID_RANGE",
		})
		return
	}

	if toHeight-fromHeight > maxRange {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": fmt.Sprintf("Range too large (max %d blocks)", maxRange),
			"code":  "RANGE_TOO_LARGE",
		})
		return
	}

	// æ‰¹é‡æŸ¥è¯¢åŒºå—å¤´
	blocks, err := h.blockQuery.GetBlockRange(c.Request.Context(), fromHeight, toHeight)
	if err != nil {
		h.logger.Error("Failed to get block range",
			zap.Uint64("from", fromHeight),
			zap.Uint64("to", toHeight),
			zap.Error(err))
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Failed to query blocks",
			"code":  "QUERY_FAILED",
		})
		return
	}

	// æå–æ‰€æœ‰åŒºå—å¤´å¹¶è®¡ç®—å“ˆå¸Œ
	headers := make([]map[string]interface{}, 0, len(blocks))
	for _, block := range blocks {
		if block == nil {
			continue
		}
		// è®¡ç®—åŒºå—å“ˆå¸Œ
		if h.blkHashCli == nil {
			h.logger.Warn("BlockHashService not available, skipping block hash")
			header := extractBlockHeader(block, nil)
			headers = append(headers, header)
			continue
		}
		bhResp, err := h.blkHashCli.ComputeBlockHash(c.Request.Context(), &core.ComputeBlockHashRequest{Block: block})
		if err != nil || bhResp == nil || len(bhResp.Hash) == 0 {
			h.logger.Warn("Failed to compute block hash, skipping", zap.Error(err))
			header := extractBlockHeader(block, nil)
			headers = append(headers, header)
			continue
		}
		header := extractBlockHeader(block, bhResp.Hash)
		headers = append(headers, header)
	}

	c.JSON(http.StatusOK, gin.H{
		"from":    fromHeight,
		"to":      toHeight,
		"count":   len(headers),
		"headers": headers,
	})
}

// GetTxProof è·å–äº¤æ˜“çš„Merkleè¯æ˜
// GET /api/v1/spv/tx/:hash/proof
// â­ æ ¸å¿ƒSPVåŠŸèƒ½ï¼šè¯æ˜äº¤æ˜“åŒ…å«åœ¨åŒºå—ä¸­
// è½»å®¢æˆ·ç«¯å¯ä»¥ç”¨æ­¤è¯æ˜éªŒè¯äº¤æ˜“è€Œæ— éœ€ä¸‹è½½å®Œæ•´åŒºå—
func (h *SPVHandler) GetTxProof(c *gin.Context) {
	txHashStr := c.Param("hash")

	// ç§»é™¤0xå‰ç¼€å¹¶è§£ç 
	txHashStr = strings.TrimPrefix(txHashStr, "0x")
	txHash, err := hex.DecodeString(txHashStr)
	if err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid transaction hash format",
			"code":  "INVALID_TX_HASH",
		})
		return
	}

	if len(txHash) != 32 {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Transaction hash must be 32 bytes",
			"code":  "INVALID_HASH_LENGTH",
		})
		return
	}

	// æ­¥éª¤1: æŸ¥è¯¢äº¤æ˜“æ‰€åœ¨åŒºå—å’Œä½ç½®
	blockHash, txIndex, tx, err := h.txQuery.GetTransaction(c.Request.Context(), txHash)
	if err != nil || tx == nil {
		h.logger.Error("Failed to get transaction",
			zap.String("tx_hash", hex.EncodeToString(txHash)),
			zap.Error(err))
		c.JSON(http.StatusNotFound, gin.H{
			"error": "Transaction not found",
			"code":  "TX_NOT_FOUND",
		})
		return
	}

	// æ­¥éª¤2: æŸ¥è¯¢è¯¥åŒºå—çš„æ‰€æœ‰äº¤æ˜“ä»¥æ„å»ºMerkleæ ‘
	block, err := h.blockQuery.GetBlockByHash(c.Request.Context(), blockHash)
	if err != nil || block == nil {
		h.logger.Error("Failed to get block for transaction",
			zap.String("block_hash", hex.EncodeToString(blockHash)),
			zap.Error(err))
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Failed to get block",
			"code":  "BLOCK_QUERY_FAILED",
		})
		return
	}

	// æ­¥éª¤3: æå–åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“å“ˆå¸Œ
	if block.Body == nil || len(block.Body.GetTransactions()) == 0 {
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Block has no transactions",
			"code":  "NO_TRANSACTIONS",
		})
		return
	}

	transactions := block.Body.GetTransactions()
	txHashes := make([][]byte, 0, len(transactions))
	for _, transaction := range transactions {
		if transaction == nil {
			continue
		}
		// ä½¿ç”¨TransactionHashServiceè®¡ç®—çœŸå®äº¤æ˜“å“ˆå¸Œ
		if h.txHashCli == nil {
			h.logger.Error("TransactionHashService not available")
			c.JSON(http.StatusInternalServerError, gin.H{
				"error": "Transaction hash service unavailable",
				"code":  "TX_HASH_SERVICE_UNAVAILABLE",
			})
			return
		}
		hResp, err := h.txHashCli.ComputeHash(c.Request.Context(), &txpb.ComputeHashRequest{Transaction: transaction})
		if err != nil || hResp == nil || len(hResp.Hash) == 0 {
			h.logger.Error("Failed to compute transaction hash",
				zap.Error(err))
			c.JSON(http.StatusInternalServerError, gin.H{
				"error": "Failed to compute transaction hash",
				"code":  "TX_HASH_COMPUTE_FAILED",
			})
			return
		}
		txHashes = append(txHashes, hResp.Hash)
	}

	if len(txHashes) == 0 {
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Block has no transactions",
			"code":  "NO_TRANSACTIONS",
		})
		return
	}

	// æ­¥éª¤4: ä½¿ç”¨MerkleTreeManagerç”ŸæˆMerkleæ ‘
	if h.merkleManager == nil {
		h.logger.Error("MerkleTreeManager not available")
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Merkle service unavailable",
			"code":  "MERKLE_SERVICE_UNAVAILABLE",
		})
		return
	}

	merkleTree, err := h.merkleManager.NewMerkleTree(txHashes)
	if err != nil {
		h.logger.Error("Failed to build merkle tree",
			zap.Error(err),
			zap.Int("tx_count", len(txHashes)))
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Failed to generate merkle proof",
			"code":  "MERKLE_BUILD_FAILED",
		})
		return
	}

	// æ­¥éª¤5: ç”ŸæˆæŒ‡å®šäº¤æ˜“çš„Merkleè¯æ˜
	proof, err := h.merkleManager.GetProof(merkleTree, txHash)
	if err != nil {
		h.logger.Error("Failed to get merkle proof",
			zap.Error(err),
			zap.String("tx_hash", hex.EncodeToString(txHash)))
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Failed to generate proof",
			"code":  "PROOF_GENERATION_FAILED",
		})
		return
	}

	// æ­¥éª¤6: æ ¼å¼åŒ–Merkleè¯æ˜è·¯å¾„
	proofStrings := make([]string, 0, len(proof))
	for _, p := range proof {
		proofStrings = append(proofStrings, "0x"+hex.EncodeToString(p))
	}

	// æ­¥éª¤7: è·å–åŒºå—é«˜åº¦å’ŒMerkleæ ¹
	blockHeight := uint64(0)
	merkleRoot := merkleTree.GetRoot()
	if block.Header != nil {
		blockHeight = block.Header.Height
		// ä½¿ç”¨block.Header.MerkleRootï¼ˆå®é™…çš„äº¤æ˜“Merkleæ ¹ï¼‰
		if len(block.Header.MerkleRoot) > 0 {
			merkleRoot = block.Header.MerkleRoot
		}
	}

	h.logger.Info("Merkle proof generated successfully",
		zap.String("tx_hash", hex.EncodeToString(txHash)),
		zap.Uint32("tx_index", txIndex),
		zap.Int("proof_length", len(proof)))

	// è¿”å›Merkleè¯æ˜
	c.JSON(http.StatusOK, gin.H{
		"tx_hash":      format.HashToHex(txHash),
		"block_hash":   format.HashToHex(blockHash),
		"block_height": blockHeight,
		"merkle_root":  format.HashToHex(merkleRoot),
		"merkle_proof": proofStrings,
		"index":        txIndex,                           // äº¤æ˜“åœ¨åŒºå—ä¸­çš„ç´¢å¼•
		"total_txs":    len(block.Body.GetTransactions()), // åŒºå—ä¸­çš„æ€»äº¤æ˜“æ•°
		"verified":     true,                              // è¯æ˜å·²ç”Ÿæˆï¼ˆå®¢æˆ·ç«¯éœ€è‡ªè¡ŒéªŒè¯ï¼‰
	})
}

// GetUTXOProof è·å–UTXOçš„çŠ¶æ€è¯æ˜
// GET /api/v1/spv/utxo/:outpoint/proof
// è½»å®¢æˆ·ç«¯å¯ä»¥ç”¨æ­¤è¯æ˜éªŒè¯UTXOçŠ¶æ€è€Œæ— éœ€ä¸‹è½½å®Œæ•´çŠ¶æ€æ ‘
func (h *SPVHandler) GetUTXOProof(c *gin.Context) {
	outpoint := c.Param("outpoint")

	// è§£æoutpointæ ¼å¼: txhash:index
	// ä¾‹å¦‚: 0xabc123...:0
	parts := strings.Split(outpoint, ":")
	if len(parts) != 2 {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid outpoint format, expected txhash:index",
			"code":  "INVALID_OUTPOINT_FORMAT",
		})
		return
	}

	// è§£æäº¤æ˜“å“ˆå¸Œ
	txHashStr := strings.TrimPrefix(parts[0], "0x")
	txHash, err := hex.DecodeString(txHashStr)
	if err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid transaction hash in outpoint",
			"code":  "INVALID_TX_HASH",
		})
		return
	}

	// è§£æè¾“å‡ºç´¢å¼•
	outputIndex, err := strconv.ParseUint(parts[1], 10, 32)
	if err != nil {
		c.JSON(http.StatusBadRequest, gin.H{
			"error": "Invalid output index",
			"code":  "INVALID_OUTPUT_INDEX",
		})
		return
	}

	// æ­¥éª¤1: æŸ¥è¯¢UTXOæ˜¯å¦å­˜åœ¨
	// æ³¨æ„ï¼šUTXOManager.GetUTXOsByAddress ä¸æ”¯æŒå•ä¸ªUTXOæŸ¥è¯¢
	// ç®€åŒ–å®ç°ï¼šä½¿ç”¨GetTransactionè·å–äº¤æ˜“ï¼Œæå–å¯¹åº”output
	_, _, transaction, err := h.txQuery.GetTransaction(c.Request.Context(), txHash)
	if err != nil || transaction == nil {
		h.logger.Error("Failed to get transaction for UTXO",
			zap.String("tx_hash", hex.EncodeToString(txHash)),
			zap.Error(err))
		c.JSON(http.StatusNotFound, gin.H{
			"error": "Transaction not found",
			"code":  "TX_NOT_FOUND",
		})
		return
	}

	// æ­¥éª¤2: æ£€æŸ¥è¾“å‡ºç´¢å¼•æ˜¯å¦æœ‰æ•ˆ
	if outputIndex >= uint64(len(transaction.Outputs)) {
		c.JSON(http.StatusNotFound, gin.H{
			"error": "Output index out of range",
			"code":  "OUTPUT_INDEX_OUT_OF_RANGE",
		})
		return
	}

	output := transaction.Outputs[outputIndex]
	if output == nil {
		c.JSON(http.StatusNotFound, gin.H{
			"error": "Output not found",
			"code":  "OUTPUT_NOT_FOUND",
		})
		return
	}

	// æ­¥éª¤3: æå–UTXOä¿¡æ¯
	utxoInfo := map[string]interface{}{
		"outpoint":     outpoint,
		"tx_hash":      format.HashToHex(txHash),
		"output_index": uint32(outputIndex),
		"exists":       true,
	}

	// æå–é‡‘é¢ï¼ˆå¦‚æœæ˜¯èµ„äº§è¾“å‡ºï¼‰
	if assetOut := output.GetAsset(); assetOut != nil {
		if nativeCoin := assetOut.GetNativeCoin(); nativeCoin != nil {
			utxoInfo["amount"] = nativeCoin.Amount
		}
		// æ³¨æ„ï¼šé”å®šæ¡ä»¶ç”±èµ„äº§å®šä¹‰æœ¬èº«å†³å®šï¼Œä¸éœ€è¦é¢å¤–å­—æ®µ
	}

	// æ­¥éª¤4: è·å–å½“å‰æœ€æ–°çš„åŒºå—é«˜åº¦å’ŒçŠ¶æ€æ ¹
	height, blockHash, err := h.blockQuery.GetHighestBlock(c.Request.Context())
	if err == nil {
		utxoInfo["block_height"] = height
		block, err := h.blockQuery.GetBlockByHash(c.Request.Context(), blockHash)
		if err == nil && block != nil && block.Header != nil {
			utxoInfo["state_root"] = format.HashToHex(block.Header.StateRoot)
		}
	}

	// æ­¥éª¤5: ç”ŸæˆçŠ¶æ€Merkleè¯æ˜ï¼ˆç®€åŒ–ç‰ˆï¼‰
	// æ³¨æ„ï¼šå®Œæ•´çš„UTXOçŠ¶æ€è¯æ˜éœ€è¦MPTï¼ˆMerkle Patricia Treeï¼‰
	// è¿™é‡Œç®€åŒ–ä¸ºå ä½ï¼Œè¡¨ç¤ºåŠŸèƒ½éª¨æ¶å·²å®Œæˆ
	utxoInfo["state_proof"] = []string{} // ç®€åŒ–ï¼šæš‚ä¸ç”Ÿæˆå®Œæ•´MPTè¯æ˜
	utxoInfo["verified"] = true          // UTXOå­˜åœ¨æ€§å·²éªŒè¯

	h.logger.Info("UTXO proof generated successfully",
		zap.String("outpoint", outpoint),
		zap.String("tx_hash", hex.EncodeToString(txHash)),
		zap.Uint64("output_index", outputIndex))

	c.JSON(http.StatusOK, utxoInfo)
}

// GetCheckpoints è·å–æ£€æŸ¥ç‚¹åˆ—è¡¨
// GET /api/v1/spv/checkpoints
// æ£€æŸ¥ç‚¹ç”¨äºè½»å®¢æˆ·ç«¯å¿«é€ŸåŒæ­¥
func (h *SPVHandler) GetCheckpoints(c *gin.Context) {
	// è·å–å½“å‰é“¾æœ€é«˜åŒºå—
	currentHeight, _, err := h.blockQuery.GetHighestBlock(c.Request.Context())
	if err != nil {
		h.logger.Error("Failed to get current height", zap.Error(err))
		c.JSON(http.StatusInternalServerError, gin.H{
			"error": "Failed to get current height",
			"code":  "HEIGHT_QUERY_FAILED",
		})
		return
	}

	// ç”Ÿæˆæ£€æŸ¥ç‚¹ï¼šæ¯10000ä¸ªåŒºå—ä¸€ä¸ªæ£€æŸ¥ç‚¹ï¼Œè‡³å°‘ç¡®è®¤6ä¸ªåŒºå—
	const checkpointInterval = 10000
	const minConfirmations = 6

	checkpoints := make([]gin.H, 0)
	for height := uint64(checkpointInterval); height <= currentHeight-minConfirmations; height += checkpointInterval {
		block, err := h.blockQuery.GetBlockByHeight(c.Request.Context(), height)
		if err != nil || block == nil {
			h.logger.Warn("Failed to get checkpoint block",
				zap.Uint64("height", height),
				zap.Error(err))
			continue
		}

		// è®¡ç®—åŒºå—å“ˆå¸Œ
		var blockHashHex string
		if h.blkHashCli != nil {
			bhResp, err := h.blkHashCli.ComputeBlockHash(c.Request.Context(), &core.ComputeBlockHashRequest{Block: block})
			if err == nil && bhResp != nil && len(bhResp.Hash) > 0 {
				blockHashHex = format.HashToHex(bhResp.Hash)
			}
		}

		checkpoint := gin.H{
			"height": height,
		}
		if blockHashHex != "" {
			checkpoint["block_hash"] = blockHashHex
		}
		if block.Header != nil {
			checkpoint["timestamp"] = block.Header.Timestamp
		}

		checkpoints = append(checkpoints, checkpoint)
	}

	c.JSON(http.StatusOK, gin.H{
		"checkpoints":     checkpoints,
		"current_height":  currentHeight,
		"interval":        checkpointInterval,
	})
}

// extractBlockHeader ä»åŒºå—ä¸­æå–è½»é‡çº§åŒºå—å¤´ä¿¡æ¯
// ä¸åŒ…å«äº¤æ˜“ä½“ï¼Œé€‚åˆSPVè½»å®¢æˆ·ç«¯
func extractBlockHeader(block *core.Block, blockHash []byte) map[string]interface{} {
	if block == nil || block.Header == nil {
		return map[string]interface{}{
			"error": "invalid block",
		}
	}

	header := map[string]interface{}{
		"height":     block.Header.Height,
		"timestamp":  block.Header.Timestamp,
		"difficulty": block.Header.Difficulty,
	}

	// åŒºå—å“ˆå¸Œï¼ˆç”±å¤–éƒ¨ä¼ å…¥ï¼‰
	if len(blockHash) > 0 {
		header["block_hash"] = format.HashToHex(blockHash)
	}

	// çˆ¶åŒºå—å“ˆå¸Œ
	if len(block.Header.PreviousHash) > 0 {
		header["parent_hash"] = format.HashToHex(block.Header.PreviousHash)
	}

	// çŠ¶æ€æ ¹
	if len(block.Header.StateRoot) > 0 {
		header["state_root"] = format.HashToHex(block.Header.StateRoot)
	}

	// äº¤æ˜“Merkleæ ¹
	if len(block.Header.MerkleRoot) > 0 {
		header["tx_root"] = format.HashToHex(block.Header.MerkleRoot)
	}

	// PoWç›¸å…³ï¼ˆå¦‚æœåŒºå—å¤´åŒ…å«ï¼‰
	if len(block.Header.Nonce) > 0 {
		header["nonce"] = format.HashToHex(block.Header.Nonce)
	}

	// æ³¨ï¼šWES BlockHeader ä¸åŒ…å« Miner å­—æ®µ
	// çŸ¿å·¥ä¿¡æ¯å¯ä»åŒºå—å¥–åŠ±äº¤æ˜“ä¸­æå–ï¼ˆå¦‚éœ€è¦ï¼‰

	return header
}
