// Package lifecycle äº¤æ˜“ç”Ÿå‘½å‘¨æœŸç®¡ç† - æäº¤å®ç°
//
// ğŸ¯ **æ¨¡å—å®šä½**ï¼šTransactionManager æ¥å£çš„äº¤æ˜“æäº¤åŠŸèƒ½å®ç°
//
// æœ¬æ–‡ä»¶å®ç°äº¤æ˜“æäº¤çš„æ ¸å¿ƒä¸šåŠ¡é€»è¾‘ï¼Œä¸“æ³¨äºï¼š
// - å·²ç­¾åäº¤æ˜“çš„ç½‘ç»œæäº¤
// - åŸºæœ¬æ ¼å¼éªŒè¯ï¼ˆéå¯†ç å­¦éªŒè¯ï¼‰
// - å†…å­˜æ± æäº¤å’Œç½‘ç»œå¹¿æ’­
// - çŠ¶æ€è·Ÿè¸ªå’Œé”™è¯¯å¤„ç†
//
// ğŸ—ï¸ **æ¶æ„å®šä½**ï¼š
// - ç½‘ç»œå±‚ï¼šè´Ÿè´£äº¤æ˜“çš„ç½‘ç»œä¼ è¾“å’Œå¹¿æ’­
// - æ ¼å¼å±‚ï¼šåŸºæœ¬çš„æ•°æ®å®Œæ•´æ€§æ£€æŸ¥
// - çŠ¶æ€å±‚ï¼šæäº¤çŠ¶æ€çš„è·Ÿè¸ªå’Œç®¡ç†
//
// ğŸ”§ **è®¾è®¡åŸåˆ™**ï¼š
// - èŒè´£å•ä¸€ï¼šåªåšç½‘ç»œæäº¤ï¼Œä¸åšç­¾åéªŒè¯
// - æ ¼å¼ä¼˜å…ˆï¼šåŸºç¡€æ ¼å¼æ£€æŸ¥ï¼Œæ·±åº¦éªŒè¯ç”±mempoolè´Ÿè´£
// - ç½‘ç»œä¸­ç«‹ï¼šæ ‡å‡†åŒ–ç½‘ç»œåè®®ï¼Œä¸å…³å¿ƒä¸šåŠ¡é€»è¾‘
// - çŠ¶æ€é€æ˜ï¼šè¯¦ç»†çš„çŠ¶æ€è·Ÿè¸ªå’Œé”™è¯¯è¯Šæ–­
//
// âš ï¸ **èŒè´£è¾¹ç•Œ**ï¼š
// æœ¬æ–‡ä»¶åªè´Ÿè´£ç½‘ç»œä¼ è¾“ï¼Œä¸å¤„ç†ï¼š
// - äº¤æ˜“ç­¾åç”Ÿæˆï¼ˆç”±sign.goè´Ÿè´£ï¼‰
// - äº¤æ˜“ç­¾åéªŒè¯ï¼ˆç”±validationå±‚è´Ÿè´£ï¼‰
// - å¤æ‚ä¸šåŠ¡é€»è¾‘ï¼ˆç”±ç›¸åº”ä¸šåŠ¡å±‚è´Ÿè´£ï¼‰
package lifecycle

import (
	"context"
	"fmt"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/constants/protocols"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/kademlia"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/node"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/mempool"
	"github.com/weisyn/v1/pkg/interfaces/network"
	"github.com/weisyn/v1/pkg/interfaces/repository"

	// åè®®å®šä¹‰
	"github.com/weisyn/v1/pb/blockchain/block/transaction"
	pbUtxo "github.com/weisyn/v1/pb/blockchain/utxo"
	txProtocol "github.com/weisyn/v1/pb/network/protocol"

	// å†…éƒ¨å·¥å…·
	"github.com/weisyn/v1/internal/core/blockchain/transaction/internal"

	peer "github.com/libp2p/go-libp2p/core/peer"
	"google.golang.org/protobuf/proto"
)

// ============================================================================
//
//	äº¤æ˜“æäº¤å®ç°æœåŠ¡
//
// ============================================================================
// TransactionSubmitService äº¤æ˜“æäº¤æ ¸å¿ƒå®ç°æœåŠ¡
//
// ğŸ¯ **æœåŠ¡èŒè´£**ï¼š
// - å®ç° TransactionManager.SubmitTransaction æ–¹æ³•
// - å¤„ç†å·²ç­¾åäº¤æ˜“çš„ç½‘ç»œæäº¤
// - ç®¡ç†æäº¤çŠ¶æ€å’Œé”™è¯¯å¤„ç†
// - æ‰§è¡ŒåŒè·¯å¾„ä¼ æ’­ï¼ˆGossipSub + Stream RPCï¼‰
//
// ğŸ”§ **ä¾èµ–æœåŠ¡**ï¼š
// - networkï¼šç½‘ç»œé€šä¿¡æœåŠ¡
// - txPoolï¼šäº¤æ˜“å†…å­˜æ± 
// - cacheStoreï¼šäº¤æ˜“ç¼“å­˜
// - loggerï¼šæ—¥å¿—è®°å½•æœåŠ¡
//
// ğŸ“ **ä½¿ç”¨ç¤ºä¾‹**ï¼š
//
//	service := NewTransactionSubmitService(logger, cache, pool, network, ...)
//	err := service.SubmitTransaction(ctx, signedTxHash)
type TransactionSubmitService struct {
	logger      log.Logger                               // æ—¥å¿—è®°å½•å™¨ï¼ˆå¯é€‰ï¼‰
	cacheStore  storage.MemoryStore                      // ç¼“å­˜å­˜å‚¨
	txPool      mempool.TxPool                           // äº¤æ˜“å†…å­˜æ± 
	network     network.Network                          // P2Pç½‘ç»œæœåŠ¡
	repository  repository.RepositoryManager             // æ•°æ®å­˜å‚¨ç®¡ç†å™¨
	hashService transaction.TransactionHashServiceClient // äº¤æ˜“å“ˆå¸ŒæœåŠ¡ï¼ˆä¾èµ–æ³¨å…¥ï¼‰
	utxoManager repository.UTXOManager                   // UTXOç®¡ç†å™¨ï¼ˆç”¨äºUTXOçŠ¶æ€ç®¡ç†ï¼‰

	// çœŸå®ç½‘ç»œä¾èµ–
	host           node.Host                    // èŠ‚ç‚¹Hostæ¥å£ï¼ˆè·å–çœŸå®èŠ‚ç‚¹IDï¼‰
	kbucketManager kademlia.RoutingTableManager // è·¯ç”±è¡¨ç®¡ç†å™¨ï¼ˆèŠ‚ç‚¹é€‰æ‹©ï¼‰
}

// NewTransactionSubmitService åˆ›å»ºäº¤æ˜“æäº¤æœåŠ¡å®ä¾‹
//
// ğŸ—ï¸ **æ„é€ å™¨æ¨¡å¼**ï¼š
// ä½¿ç”¨ä¾èµ–æ³¨å…¥åˆ›å»ºæœåŠ¡å®ä¾‹ï¼Œç¡®ä¿æ‰€æœ‰ä¾èµ–éƒ½å·²æ­£ç¡®åˆå§‹åŒ–
func NewTransactionSubmitService(
	logger log.Logger,
	cacheStore storage.MemoryStore,
	txPool mempool.TxPool,
	network network.Network,
	repository repository.RepositoryManager,
	hashService transaction.TransactionHashServiceClient,
	utxoManager repository.UTXOManager,
	host node.Host,
	kbucketManager kademlia.RoutingTableManager,
) *TransactionSubmitService {
	return &TransactionSubmitService{
		logger:         logger,
		cacheStore:     cacheStore,
		txPool:         txPool,
		network:        network,
		repository:     repository,
		hashService:    hashService,
		utxoManager:    utxoManager,
		host:           host,
		kbucketManager: kbucketManager,
	}
}

// ============================================================================
//
//	æ ¸å¿ƒäº¤æ˜“æäº¤æ–¹æ³•å®ç°
//
// ============================================================================
// SubmitTransaction æäº¤å·²ç­¾åäº¤æ˜“åˆ°ç½‘ç»œ
//
// ğŸ¯ **æ–¹æ³•èŒè´£**ï¼š
// å®ç° blockchain.TransactionManager.SubmitTransaction æ¥å£
// å°†å·²ç­¾åçš„äº¤æ˜“æäº¤åˆ°ç½‘ç»œè¿›è¡Œä¼ æ’­
//
// ğŸ“‹ **æäº¤æµç¨‹**ï¼š
// 1. è·å–å·²ç­¾åçš„äº¤æ˜“æ•°æ®
// 2. åŸºæœ¬æ ¼å¼éªŒè¯ï¼ˆéå¯†ç å­¦éªŒè¯ï¼‰
// 3. æäº¤åˆ°æœ¬åœ°å†…å­˜æ± 
// 4. æ‰§è¡Œç½‘ç»œå¹¿æ’­ä¼ æ’­
// 5. æ›´æ–°æäº¤çŠ¶æ€
//
// ğŸ’¡ **å…³é”®åŸåˆ™**ï¼š
// - åªå¤„ç†**å·²ç­¾å**äº¤æ˜“ï¼Œä¸è¿›è¡Œç­¾åç”Ÿæˆ
// - åªåš**åŸºæœ¬æ ¼å¼**æ£€æŸ¥ï¼Œæ·±åº¦éªŒè¯ç”±mempoolå¤„ç†
// - é‡ç‚¹æ˜¯**ç½‘ç»œä¼ è¾“**ï¼Œä¸æ˜¯ä¸šåŠ¡é€»è¾‘éªŒè¯
func (s *TransactionSubmitService) SubmitTransaction(
	ctx context.Context,
	signedTxHash []byte,
) error {
	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("å¼€å§‹æäº¤äº¤æ˜“åˆ°ç½‘ç»œ - å“ˆå¸Œ: %x", signedTxHash[:8]))
	}

	// 1. åŸºç¡€å‚æ•°éªŒè¯
	if len(signedTxHash) != 32 {
		err := fmt.Errorf("ç­¾åäº¤æ˜“å“ˆå¸Œé•¿åº¦æ— æ•ˆ: æœŸæœ›32å­—èŠ‚ï¼Œå®é™…%då­—èŠ‚", len(signedTxHash))
		if s.logger != nil {
			s.logger.Warn(err.Error())
		}
		return err
	}

	// 2. æ£€æŸ¥é‡å¤æäº¤ï¼ˆé€šè¿‡äº¤æ˜“æ± æŸ¥è¯¢ï¼‰
	existingTx, err := s.txPool.GetTx(signedTxHash)
	if err != nil {
		// å†…å­˜æ± æœªå‘½ä¸­è§†ä¸ºæ­£å¸¸ï¼Œç»§ç»­ä»ç¼“å­˜è·å–å¹¶æäº¤
		if s.logger != nil {
			s.logger.Debug("äº¤æ˜“ä¸åœ¨å†…å­˜æ± ä¸­ï¼Œå°†ä»ç¼“å­˜è·å–å¹¶æäº¤")
		}
		existingTx = nil
	}
	if existingTx != nil {
		if s.logger != nil {
			s.logger.Info("äº¤æ˜“å·²å­˜åœ¨äºäº¤æ˜“æ± ä¸­ï¼Œè·³è¿‡é‡å¤æäº¤")
		}
		return nil // é‡å¤æäº¤ä¸ç®—é”™è¯¯ï¼Œè¿”å›æˆåŠŸå®ç°å¹‚ç­‰
	}

	// 3. ä»ç¼“å­˜è·å–å·²ç­¾åäº¤æ˜“
	tx, err := s.getSignedTransaction(ctx, signedTxHash)
	if err != nil {
		if s.logger != nil {
			s.logger.Error(fmt.Sprintf("è·å–å·²ç­¾åäº¤æ˜“å¤±è´¥: %v", err))
		}
		return fmt.Errorf("è·å–å·²ç­¾åäº¤æ˜“å¤±è´¥: %v", err)
	}

	// 4. åŸºæœ¬æ ¼å¼éªŒè¯ï¼ˆéå¯†ç å­¦éªŒè¯ï¼‰
	if err := s.validateBasicFormat(tx); err != nil {
		if s.logger != nil {
			s.logger.Error(fmt.Sprintf("äº¤æ˜“æ ¼å¼éªŒè¯å¤±è´¥: %v", err))
		}
		return fmt.Errorf("äº¤æ˜“æ ¼å¼éªŒè¯å¤±è´¥: %v", err)
	}

	// 5. æäº¤åˆ°å†…å­˜æ± ï¼ˆå†…å­˜æ± ä¼šè¿›è¡Œæ·±åº¦éªŒè¯ï¼‰
	submittedTxHash, err := s.txPool.SubmitTx(tx)
	if err != nil {
		if s.logger != nil {
			s.logger.Error(fmt.Sprintf("å†…å­˜æ± æäº¤å¤±è´¥: %v", err))
		}
		return fmt.Errorf("å†…å­˜æ± æäº¤å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("äº¤æ˜“æˆåŠŸæäº¤åˆ°å†…å­˜æ±  - å“ˆå¸Œ: %x", submittedTxHash[:8]))
	}

	// ğŸ”¥ 5.5. é”å®šç›¸å…³UTXOçŠ¶æ€ï¼ˆä¿®å¤ä½™é¢æ˜¾ç¤ºé—®é¢˜ï¼‰
	if err := s.lockTransactionUTXOs(ctx, tx); err != nil {
		if s.logger != nil {
			s.logger.Warnf("é”å®šäº¤æ˜“UTXOå¤±è´¥ï¼ˆä¸é˜»æ­¢æäº¤æµç¨‹ï¼‰: %v", err)
		}
		// æ³¨æ„ï¼šUTXOé”å®šå¤±è´¥ä¸å½±å“äº¤æ˜“æäº¤æµç¨‹ï¼Œå› ä¸ºå†…å­˜æ± å·²ç»æ¥å—äº†äº¤æ˜“
	}

	// 6. ç½‘ç»œå¹¿æ’­ä¼ æ’­
	if err := s.broadcastToNetwork(ctx, tx); err != nil {
		if s.logger != nil {
			s.logger.Error(fmt.Sprintf("ç½‘ç»œå¹¿æ’­å¤±è´¥: %v", err))
		}
		return fmt.Errorf("ç½‘ç»œå¹¿æ’­å¤±è´¥: %v", err)
	}

	// 7. æäº¤å®Œæˆï¼ˆçŠ¶æ€ç”±å†…å­˜æ± ç®¡ç†ï¼‰

	if s.logger != nil {
		s.logger.Info(fmt.Sprintf("âœ… äº¤æ˜“æäº¤æˆåŠŸ - å“ˆå¸Œ: %x", signedTxHash[:8]))
	}

	return nil
}

// ============================================================================
//
//	è¾…åŠ©æ–¹æ³•å®ç°
//
// ============================================================================

// getSignedTransaction è·å–å·²ç­¾åäº¤æ˜“
func (s *TransactionSubmitService) getSignedTransaction(ctx context.Context, txHash []byte) (*transaction.Transaction, error) {
	// ä»ç¼“å­˜è·å–å·²ç­¾åäº¤æ˜“
	tx, exists, err := internal.GetSignedTransactionFromCache(ctx, s.cacheStore, txHash, s.logger)
	if err != nil {
		return nil, fmt.Errorf("è·å–äº¤æ˜“å¤±è´¥: %v", err)
	}
	if !exists {
		return nil, fmt.Errorf("å·²ç­¾åäº¤æ˜“ä¸å­˜åœ¨äºç¼“å­˜ä¸­: %x", txHash)
	}
	return tx, nil
}

// validateBasicFormat åŸºæœ¬æ ¼å¼éªŒè¯ï¼ˆéå¯†ç å­¦éªŒè¯ï¼‰
func (s *TransactionSubmitService) validateBasicFormat(tx *transaction.Transaction) error {
	if tx == nil {
		return fmt.Errorf("äº¤æ˜“å¯¹è±¡ä¸ºç©º")
	}

	// åŸºç¡€å­—æ®µæ£€æŸ¥
	if tx.Version == 0 {
		return fmt.Errorf("äº¤æ˜“ç‰ˆæœ¬å·æ— æ•ˆ")
	}
	if len(tx.ChainId) == 0 {
		return fmt.Errorf("é“¾IDä¸ºç©º")
	}
	if tx.CreationTimestamp == 0 {
		return fmt.Errorf("åˆ›å»ºæ—¶é—´æˆ³æ— æ•ˆ")
	}

	// è¾“å…¥è¾“å‡ºåŸºæœ¬æ£€æŸ¥
	if len(tx.Inputs) == 0 && len(tx.Outputs) == 0 {
		return fmt.Errorf("äº¤æ˜“æ—¢æ— è¾“å…¥ä¹Ÿæ— è¾“å‡º")
	}

	// æ³¨æ„ï¼šè¿™é‡Œä¸åšç­¾åéªŒè¯ï¼Œåªåšæ ¼å¼æ£€æŸ¥
	// æ·±åº¦éªŒè¯ï¼ˆåŒ…æ‹¬ç­¾åéªŒè¯ï¼‰ç”±å†…å­˜æ± æˆ–ä¸“é—¨çš„éªŒè¯æœåŠ¡å¤„ç†

	return nil
}

// broadcastToNetwork ç½‘ç»œå¹¿æ’­ä¼ æ’­
func (s *TransactionSubmitService) broadcastToNetwork(ctx context.Context, tx *transaction.Transaction) error {
	// åŒè·¯å¾„ä¼ æ’­ï¼šGossipSubï¼ˆä¸»è¦ï¼‰+ Stream RPCï¼ˆå¤‡ä»½ï¼‰

	// 1. GossipSubå¹¿æ’­ï¼ˆä¸»è¦ä¼ æ’­è·¯å¾„ï¼‰
	if err := s.broadcastViaGossipSub(ctx, tx); err != nil {
		if s.logger != nil {
			s.logger.Warn(fmt.Sprintf("GossipSubå¹¿æ’­å¤±è´¥: %v", err))
		}
		// GossipSubå¤±è´¥ä¸é˜»æ–­ï¼Œç»§ç»­å°è¯•Stream RPC
	}

	// 2. Stream RPCå¤‡ä»½ä¼ æ’­
	if err := s.broadcastViaStreamRPC(ctx, tx); err != nil {
		if s.logger != nil {
			s.logger.Warn(fmt.Sprintf("Stream RPCä¼ æ’­å¤±è´¥: %v", err))
		}
		// ä¸¤ç§æ–¹å¼éƒ½å¤±è´¥æ‰è¿”å›é”™è¯¯
		return fmt.Errorf("æ‰€æœ‰ä¼ æ’­è·¯å¾„éƒ½å¤±è´¥")
	}

	return nil
}

// broadcastViaGossipSub GossipSubå¹¿æ’­
func (s *TransactionSubmitService) broadcastViaGossipSub(ctx context.Context, tx *transaction.Transaction) error {
	// æ„é€ äº¤æ˜“å¹¿æ’­æ¶ˆæ¯
	announcement := &txProtocol.TransactionAnnouncement{
		MessageId:       fmt.Sprintf("tx_announce_%d", tx.CreationTimestamp),
		TransactionHash: s.calculateTransactionHash(tx),
		Transaction:     tx,
		Timestamp:       uint64(tx.CreationTimestamp),
		SenderPeerId:    []byte(s.host.ID().String()),
		PropagationHop:  1,
	}

	// åºåˆ—åŒ–æ¶ˆæ¯
	data, err := proto.Marshal(announcement)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–äº¤æ˜“å¹¿æ’­æ¶ˆæ¯å¤±è´¥: %w", err)
	}

	// å‘å¸ƒåˆ°GossipSubä¸»é¢˜
	return s.network.Publish(ctx, protocols.TopicTransactionAnnounce, data, nil)
}

// broadcastViaStreamRPC Stream RPCå¤‡ä»½ä¼ æ’­
func (s *TransactionSubmitService) broadcastViaStreamRPC(ctx context.Context, tx *transaction.Transaction) error {
	// é€‰æ‹©K-bucketè¿‘é‚»èŠ‚ç‚¹
	nearbyPeers, err := s.selectNearbyPeers(ctx, 2)
	if err != nil {
		return fmt.Errorf("é€‰æ‹©è¿‘é‚»èŠ‚ç‚¹å¤±è´¥: %w", err)
	}

	if len(nearbyPeers) == 0 {
		return fmt.Errorf("æ²¡æœ‰å¯ç”¨çš„è¿‘é‚»èŠ‚ç‚¹")
	}

	// æ„é€ ä¼ æ’­è¯·æ±‚
	request := &txProtocol.TransactionPropagationRequest{
		RequestId:       fmt.Sprintf("tx_stream_%d", tx.CreationTimestamp),
		TxHashes:        [][]byte{s.calculateTransactionHash(tx)},
		RequesterPeerId: []byte(s.host.ID().String()),
		Timestamp:       uint64(tx.CreationTimestamp),
	}

	requestBytes, err := proto.Marshal(request)
	if err != nil {
		return fmt.Errorf("åºåˆ—åŒ–ä¼ æ’­è¯·æ±‚å¤±è´¥: %w", err)
	}

	// å‘å¤šä¸ªèŠ‚ç‚¹å‘é€Stream RPC
	for _, peerID := range nearbyPeers {
		if err := s.sendStreamRPC(ctx, peerID, requestBytes); err != nil {
			if s.logger != nil {
				s.logger.Warn(fmt.Sprintf("å‘èŠ‚ç‚¹%så‘é€Stream RPCå¤±è´¥: %v", peerID, err))
			}
			continue
		}
		// ä»»ä¸€æˆåŠŸå³å¯
		return nil
	}

	return fmt.Errorf("æ‰€æœ‰Stream RPCè°ƒç”¨éƒ½å¤±è´¥")
}

// selectNearbyPeers é€‰æ‹©K-bucketè¿‘é‚»èŠ‚ç‚¹
func (s *TransactionSubmitService) selectNearbyPeers(ctx context.Context, count int) ([]peer.ID, error) {
	// ä½¿ç”¨æœ¬åœ°èŠ‚ç‚¹IDä½œä¸ºè·¯ç”±é”®
	localID := s.host.ID()
	routingKey := []byte(localID.String())

	// æŸ¥è¯¢è·¯ç”±è¡¨ç®¡ç†å™¨ï¼ˆç›´æ¥è°ƒç”¨ç®€åŒ–æ–¹æ³•ï¼‰
	peerIDs := s.kbucketManager.FindClosestPeers(routingKey, count)

	return peerIDs, nil
}

// sendStreamRPC å‘é€Stream RPC
func (s *TransactionSubmitService) sendStreamRPC(ctx context.Context, peerID peer.ID, requestBytes []byte) error {
	// ä½¿ç”¨ç½‘ç»œæœåŠ¡å‘é€Stream RPC
	respBytes, err := s.network.Call(ctx, peerID, protocols.ProtocolTransactionDirect, requestBytes, nil)
	if err != nil {
		return fmt.Errorf("Stream RPCè°ƒç”¨å¤±è´¥: %w", err)
	}

	// è§£æå“åº”
	var response txProtocol.TransactionPropagationResponse
	if err := proto.Unmarshal(respBytes, &response); err != nil {
		return fmt.Errorf("è§£æå“åº”å¤±è´¥: %w", err)
	}

	if !response.Success {
		return fmt.Errorf("èŠ‚ç‚¹æ‹’ç»ä¼ æ’­: %v", response.ErrorMessage)
	}

	return nil
}

// calculateTransactionHash è®¡ç®—äº¤æ˜“å“ˆå¸Œ
func (s *TransactionSubmitService) calculateTransactionHash(tx *transaction.Transaction) []byte {
	// ä½¿ç”¨æ³¨å…¥çš„å“ˆå¸ŒæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	hashReq := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: false,
	}

	ctx := context.Background()
	hashResp, err := s.hashService.ComputeHash(ctx, hashReq)
	if err != nil {
		if s.logger != nil {
			s.logger.Error(fmt.Sprintf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %v", err))
		}
		// è¿”å›é›¶å“ˆå¸Œä½œä¸ºfallback
		return make([]byte, 32)
	}

	return hashResp.Hash
}

// lockTransactionUTXOs é”å®šäº¤æ˜“è¾“å…¥ä¸­çš„AssetUTXOçŠ¶æ€
//
// ğŸ”’ **UTXOçŠ¶æ€é”å®šæ ¸å¿ƒå®ç°**
//
// å½“äº¤æ˜“æˆåŠŸæäº¤åˆ°å†…å­˜æ± åï¼Œå°†äº¤æ˜“è¾“å…¥å¼•ç”¨çš„AssetUTXOçŠ¶æ€ä»AVAILABLEæ”¹ä¸ºREFERENCEDï¼Œ
// è§£å†³ç”¨æˆ·æäº¤äº¤æ˜“åä½™é¢æ˜¾ç¤ºä¸å‡†ç¡®çš„é—®é¢˜ã€‚
//
// å®ç°è¦ç‚¹ï¼š
// - åªå¤„ç†AssetUTXOï¼ˆåŒ…å«åŸç”Ÿå¸å’Œä»£å¸ï¼‰
// - ResourceUTXOå·²æœ‰ç‹¬ç«‹çš„å¼•ç”¨æœºåˆ¶ï¼Œä¸éœ€è¦é¢å¤–å¤„ç†
// - é”å®šå¤±è´¥ä¸å½±å“äº¤æ˜“æäº¤æµç¨‹ï¼ˆå·²ç»åœ¨å†…å­˜æ± ä¸­ï¼‰
// - ä½¿ç”¨UTXOç®¡ç†å™¨çš„ReferenceUTXOæ–¹æ³•å®ç°çŠ¶æ€åˆ‡æ¢
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: äº¤æ˜“å¯¹è±¡
//
// è¿”å›ï¼š
//   - error: é”å®šé”™è¯¯ï¼ˆä¸å½±å“äº¤æ˜“æäº¤ï¼‰
func (s *TransactionSubmitService) lockTransactionUTXOs(ctx context.Context, tx *transaction.Transaction) error {
	if s.utxoManager == nil {
		return fmt.Errorf("UTXOç®¡ç†å™¨æœªåˆå§‹åŒ–")
	}

	if s.logger != nil {
		s.logger.Debugf("å¼€å§‹é”å®šäº¤æ˜“UTXO - è¾“å…¥æ•°é‡: %d", len(tx.Inputs))
	}

	var lockErrors []error
	lockedCount := 0

	// éå†äº¤æ˜“è¾“å…¥ï¼Œé”å®šç›¸å…³çš„AssetUTXO
	for i, input := range tx.Inputs {
		if input == nil || input.PreviousOutput == nil {
			continue
		}

		// ğŸ” å…ˆæŸ¥è¯¢UTXOç¡®è®¤å…¶ç±»å‹
		utxo, err := s.utxoManager.GetUTXO(ctx, input.PreviousOutput)
		if err != nil {
			lockErrors = append(lockErrors, fmt.Errorf("è¾“å…¥%d: æŸ¥è¯¢UTXOå¤±è´¥: %w", i, err))
			continue
		}
		if utxo == nil {
			lockErrors = append(lockErrors, fmt.Errorf("è¾“å…¥%d: UTXOä¸å­˜åœ¨", i))
			continue
		}

		// ğŸ¯ åªé”å®šAssetUTXOï¼ˆResourceUTXOæœ‰ç‹¬ç«‹çš„å¼•ç”¨æœºåˆ¶ï¼‰
		if utxo.GetCategory() == pbUtxo.UTXOCategory_UTXO_CATEGORY_ASSET {
			// ä½¿ç”¨ReferenceUTXOæ–¹æ³•å°†çŠ¶æ€ä»AVAILABLEæ”¹ä¸ºREFERENCED
			err := s.utxoManager.ReferenceUTXO(ctx, input.PreviousOutput)
			if err != nil {
				lockErrors = append(lockErrors, fmt.Errorf("è¾“å…¥%d: é”å®šAssetUTXOå¤±è´¥: %w", i, err))
				continue
			}
			lockedCount++

			if s.logger != nil {
				s.logger.Debugf("âœ… è¾“å…¥%d AssetUTXOé”å®šæˆåŠŸ - OutPoint: %x:%d",
					i, input.PreviousOutput.TxId[:8], input.PreviousOutput.OutputIndex)
			}
		} else {
			// ResourceUTXOè·³è¿‡ï¼Œå®ƒä»¬æœ‰ç‹¬ç«‹çš„å¼•ç”¨è®¡æ•°æœºåˆ¶
			if s.logger != nil {
				s.logger.Debugf("â­ï¸ è¾“å…¥%d ä¸ºResourceUTXOï¼Œè·³è¿‡é”å®š", i)
			}
		}
	}

	// è®°å½•é”å®šç»“æœ
	if s.logger != nil {
		if len(lockErrors) > 0 {
			s.logger.Warnf("UTXOé”å®šå®Œæˆ - æˆåŠŸ: %dä¸ª, å¤±è´¥: %dä¸ª", lockedCount, len(lockErrors))
			for _, err := range lockErrors {
				s.logger.Warnf("é”å®šé”™è¯¯: %v", err)
			}
		} else {
			s.logger.Infof("âœ… æ‰€æœ‰AssetUTXOé”å®šæˆåŠŸ - æ€»è®¡: %dä¸ª", lockedCount)
		}
	}

	// å¦‚æœæœ‰é”å®šé”™è¯¯ï¼Œè¿”å›æ±‡æ€»é”™è¯¯ï¼ˆä½†ä¸å½±å“äº¤æ˜“æäº¤ï¼‰
	if len(lockErrors) > 0 {
		return fmt.Errorf("éƒ¨åˆ†UTXOé”å®šå¤±è´¥ (%d/%d): %v", len(lockErrors), len(tx.Inputs), lockErrors[0])
	}

	return nil
}
