// Package recovery æä¾›ç´¢å¼•æ¢å¤ç®¡ç†
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - æ£€æµ‹å’Œä¿®å¤æ‰€æœ‰ç´¢å¼•ç›¸å…³çš„æŸå
// - æ”¯æŒTipã€Heightã€Hashã€TXç­‰å¤šç§ç´¢å¼•ç±»å‹
// - æä¾›é€‰æ‹©æ€§ä¿®å¤å’Œå…¨é‡é‡å»ºèƒ½åŠ›
package recovery

import (
	"context"
	"encoding/binary"
	"fmt"

	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	logiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"google.golang.org/protobuf/proto"
)

// ============================================================================
//                              ç´¢å¼•æ¢å¤ç®¡ç†å™¨
// ============================================================================

// IndexRecoveryManager ç´¢å¼•æ¢å¤ç®¡ç†å™¨
//
// ğŸ¯ **è¦†ç›–èŒƒå›´**ï¼š
// - tip_inconsistent: BestChainç´¢å¼•ä¸ä¸€è‡´
// - index_corrupt_hash_height: hashâ†’heightæ˜ å°„æŸå
// - index_corrupt_height_index: heightâ†’hashæ˜ å°„æŸå
// - tx_index_corrupt: äº¤æ˜“ç´¢å¼•æŸå
// - resource_index_corrupt: èµ„æºç´¢å¼•æŸå
type IndexRecoveryManager struct {
	queryService persistence.QueryService
	store        storage.BadgerStore
	hashManager  crypto.HashManager
	logger       logiface.Logger
}

// NewIndexRecoveryManager åˆ›å»ºç´¢å¼•æ¢å¤ç®¡ç†å™¨
func NewIndexRecoveryManager(
	queryService persistence.QueryService,
	store storage.BadgerStore,
	hashManager crypto.HashManager,
	logger logiface.Logger,
) *IndexRecoveryManager {
	return &IndexRecoveryManager{
		queryService: queryService,
		store:        store,
		hashManager:  hashManager,
		logger:       logger,
	}
}

// ============================================================================
//                              Tipç´¢å¼•ä¿®å¤
// ============================================================================

// RepairTipByHeight ä¿®å¤BestChainç´¢å¼•ï¼ˆåŸºäºé«˜åº¦ï¼‰
//
// ğŸ¯ **ä¿®å¤ç­–ç•¥**ï¼š
// 1. è¯»å–æŒ‡å®šé«˜åº¦çš„åŒºå—
// 2. è®¡ç®—åŒºå—hash
// 3. æ›´æ–° state:chain:tip
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - height: é“¾å°–é«˜åº¦
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *IndexRecoveryManager) RepairTipByHeight(ctx context.Context, height uint64) error {
	if m.logger != nil {
		m.logger.Infof("ğŸ”§ ä¿®å¤Tipç´¢å¼•: height=%d", height)
	}

	// 1. è¯»å–åŒºå—
	block, err := m.queryService.GetBlockByHeight(ctx, height)
	if err != nil {
		return fmt.Errorf("get block by height failed: %w", err)
	}

	if block == nil || block.Header == nil {
		return fmt.Errorf("block is nil at height %d", height)
	}

	// 2. è®¡ç®—åŒºå—hash
	blockHash, err := m.computeBlockHash(ctx, block)
	if err != nil {
		return fmt.Errorf("compute block hash failed: %w", err)
	}

	// 3. æ›´æ–° state:chain:tip
	if err := m.updateChainTip(ctx, height, blockHash); err != nil {
		return fmt.Errorf("update chain tip failed: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("âœ… Tipç´¢å¼•ä¿®å¤æˆåŠŸ: height=%d hash=%x", height, blockHash[:6])
	}

	return nil
}

// RepairTipIndex ä¿®å¤BestChainç´¢å¼•ï¼ˆæä¾›hashï¼‰
//
// ğŸ¯ **ä¿®å¤ç­–ç•¥**ï¼š
// ç›´æ¥ä½¿ç”¨æä¾›çš„æ­£ç¡®hashæ›´æ–°state:chain:tip
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - height: é“¾å°–é«˜åº¦
//   - correctHash: æ­£ç¡®çš„åŒºå—hash
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *IndexRecoveryManager) RepairTipIndex(ctx context.Context, height uint64, correctHash []byte) error {
	if m.logger != nil {
		m.logger.Infof("ğŸ”§ ä¿®å¤Tipç´¢å¼•ï¼ˆä½¿ç”¨æä¾›çš„hashï¼‰: height=%d hash=%x", height, correctHash[:6])
	}

	if len(correctHash) != 32 {
		return fmt.Errorf("invalid hash length: %d", len(correctHash))
	}

	if err := m.updateChainTip(ctx, height, correctHash); err != nil {
		return fmt.Errorf("update chain tip failed: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("âœ… Tipç´¢å¼•ä¿®å¤æˆåŠŸ")
	}

	return nil
}

// updateChainTip æ›´æ–°é“¾å°–ç´¢å¼•
func (m *IndexRecoveryManager) updateChainTip(ctx context.Context, height uint64, blockHash []byte) error {
	tipKey := []byte("state:chain:tip")
	tipValue := make([]byte, 40) // 8 bytes height + 32 bytes hash

	binary.BigEndian.PutUint64(tipValue[0:8], height)
	copy(tipValue[8:40], blockHash)

	return m.store.Set(ctx, tipKey, tipValue)
}

// ============================================================================
//                              Heightç´¢å¼•é‡å»º
// ============================================================================

// RebuildHeightIndex é‡å»ºheightâ†’hashç´¢å¼•
//
// ğŸ¯ **ä¿®å¤ç­–ç•¥**ï¼š
// 1. æ‰«ææŒ‡å®šèŒƒå›´çš„åŒºå—æ–‡ä»¶
// 2. é‡å»º indices:height:{height} â†’ hash æ˜ å°„
// 3. é‡å»º indices:hash:{hash} â†’ height åå‘æ˜ å°„
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - fromHeight: èµ·å§‹é«˜åº¦
//   - toHeight: ç»“æŸé«˜åº¦
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *IndexRecoveryManager) RebuildHeightIndex(ctx context.Context, fromHeight, toHeight uint64) error {
	if m.logger != nil {
		m.logger.Infof("ğŸ”§ é‡å»ºHeightç´¢å¼•: [%d..%d]", fromHeight, toHeight)
	}

	for height := fromHeight; height <= toHeight; height++ {
		// è¯»å–åŒºå—
		block, err := m.queryService.GetBlockByHeight(ctx, height)
		if err != nil {
			if m.logger != nil {
				m.logger.Warnf("è·³è¿‡é«˜åº¦ %d: %v", height, err)
			}
			continue
		}

		if block == nil || block.Header == nil {
			if m.logger != nil {
				m.logger.Warnf("è·³è¿‡é«˜åº¦ %d: block is nil", height)
			}
			continue
		}

		// è®¡ç®—åŒºå—hash
		blockHash, err := m.computeBlockHash(ctx, block)
		if err != nil {
			if m.logger != nil {
				m.logger.Warnf("è·³è¿‡é«˜åº¦ %d: compute hash failed: %v", height, err)
			}
			continue
		}

		// æ›´æ–° indices:height:{height}
		heightKey := []byte(fmt.Sprintf("indices:height:%d", height))
		if err := m.store.Set(ctx, heightKey, blockHash); err != nil {
			return fmt.Errorf("set height index failed at %d: %w", height, err)
		}

		// æ›´æ–° indices:hash:{hash}
		hashKey := []byte(fmt.Sprintf("indices:hash:%x", blockHash))
		heightBytes := make([]byte, 8)
		binary.BigEndian.PutUint64(heightBytes, height)
		if err := m.store.Set(ctx, hashKey, heightBytes); err != nil {
			return fmt.Errorf("set hash index failed at %d: %w", height, err)
		}

		// å®šæœŸæ—¥å¿—
		if height%1000 == 0 && m.logger != nil {
			m.logger.Infof("è¿›åº¦: %d/%d", height, toHeight)
		}
	}

	if m.logger != nil {
		m.logger.Infof("âœ… Heightç´¢å¼•é‡å»ºå®Œæˆ: [%d..%d]", fromHeight, toHeight)
	}

	return nil
}

// ============================================================================
//                              TXç´¢å¼•é‡å»º
// ============================================================================

// RebuildTxIndex é‡å»ºäº¤æ˜“ç´¢å¼•
//
// ğŸ¯ **ä¿®å¤ç­–ç•¥**ï¼š
// 1. æ‰«ææŒ‡å®šèŒƒå›´çš„åŒºå—
// 2. é‡å»º indices:tx:{txHash} â†’ (height + txIndex) æ˜ å°„
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - fromHeight: èµ·å§‹é«˜åº¦
//   - toHeight: ç»“æŸé«˜åº¦
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *IndexRecoveryManager) RebuildTxIndex(ctx context.Context, fromHeight, toHeight uint64) error {
	if m.logger != nil {
		m.logger.Infof("ğŸ”§ é‡å»ºTXç´¢å¼•: [%d..%d]", fromHeight, toHeight)
	}

	for height := fromHeight; height <= toHeight; height++ {
		// è¯»å–åŒºå—
		block, err := m.queryService.GetBlockByHeight(ctx, height)
		if err != nil {
			if m.logger != nil {
				m.logger.Warnf("è·³è¿‡é«˜åº¦ %d: %v", height, err)
			}
			continue
		}

		if block == nil || block.Body == nil || len(block.Body.Transactions) == 0 {
			continue
		}

		// éå†äº¤æ˜“ï¼Œé‡å»ºTXç´¢å¼•
		for txIndex, tx := range block.Body.Transactions {
			if tx == nil {
				if m.logger != nil {
					m.logger.Warnf("åŒºå— %d çš„äº¤æ˜“ %d ä¸ºç©ºï¼Œè·³è¿‡", height, txIndex)
				}
				continue
			}

			// åºåˆ—åŒ–äº¤æ˜“
			txBytes, err := proto.Marshal(tx)
			if err != nil {
				if m.logger != nil {
					m.logger.Warnf("åºåˆ—åŒ–äº¤æ˜“å¤±è´¥ (height=%d, txIndex=%d): %v", height, txIndex, err)
				}
				continue
			}

			// è®¡ç®—äº¤æ˜“hash
			txHash, err := m.computeTxHash(ctx, txBytes)
			if err != nil {
				if m.logger != nil {
					m.logger.Warnf("è®¡ç®—äº¤æ˜“hashå¤±è´¥ (height=%d, txIndex=%d): %v", height, txIndex, err)
				}
				continue
			}

			// å†™å…¥TXç´¢å¼•: indices:tx:{txHash} â†’ {blockHash, txIndex}
			if err := m.writeTxIndex(ctx, txHash, block, uint32(txIndex)); err != nil {
				if m.logger != nil {
					m.logger.Warnf("å†™å…¥TXç´¢å¼•å¤±è´¥ (height=%d, txIndex=%d): %v", height, txIndex, err)
				}
				continue
			}
		}

		// å®šæœŸæ—¥å¿—
		if height%1000 == 0 && m.logger != nil {
			m.logger.Infof("è¿›åº¦: %d/%d", height, toHeight)
		}
	}

	if m.logger != nil {
		m.logger.Infof("âœ… TXç´¢å¼•é‡å»ºå®Œæˆ: [%d..%d]", fromHeight, toHeight)
	}

	return nil
}

// ============================================================================
//                              å…¨é‡ç´¢å¼•é‡å»º
// ============================================================================

// FullIndexRebuild å…¨é‡ç´¢å¼•é‡å»º
//
// ğŸ¯ **ä¿®å¤ç­–ç•¥**ï¼š
// - ä»genesisåˆ°æŒ‡å®šé«˜åº¦é‡å»ºæ‰€æœ‰ç´¢å¼•
// - åŒ…æ‹¬Heightç´¢å¼•ã€Hashç´¢å¼•ã€TXç´¢å¼•
//
// å‚æ•°ï¼š
//   - ctx: æ“ä½œä¸Šä¸‹æ–‡
//   - maxHeight: æœ€å¤§é«˜åº¦
//
// è¿”å›ï¼š
//   - error: ä¿®å¤å¤±è´¥çš„é”™è¯¯
func (m *IndexRecoveryManager) FullIndexRebuild(ctx context.Context, maxHeight uint64) error {
	if m.logger != nil {
		m.logger.Infof("ğŸ”§ å…¨é‡ç´¢å¼•é‡å»º: [0..%d]", maxHeight)
	}

	// é‡å»ºHeightç´¢å¼•
	if err := m.RebuildHeightIndex(ctx, 0, maxHeight); err != nil {
		return fmt.Errorf("rebuild height index failed: %w", err)
	}

	// é‡å»ºTXç´¢å¼•
	if err := m.RebuildTxIndex(ctx, 0, maxHeight); err != nil {
		return fmt.Errorf("rebuild tx index failed: %w", err)
	}

	// æ›´æ–°é“¾å°–
	if err := m.RepairTipByHeight(ctx, maxHeight); err != nil {
		return fmt.Errorf("repair tip failed: %w", err)
	}

	if m.logger != nil {
		m.logger.Infof("âœ… å…¨é‡ç´¢å¼•é‡å»ºå®Œæˆ")
	}

	return nil
}

// ============================================================================
//                              è¾…åŠ©æ–¹æ³•
// ============================================================================

// computeBlockHash è®¡ç®—åŒºå—hash
func (m *IndexRecoveryManager) computeBlockHash(ctx context.Context, block *core.Block) ([]byte, error) {
	if m.hashManager == nil {
		return nil, fmt.Errorf("hash manager not initialized")
	}

	if block == nil || block.Header == nil {
		return nil, fmt.Errorf("block or header is nil")
	}

	// åºåˆ—åŒ–åŒºå—å¤´
	headerBytes, err := proto.Marshal(block.Header)
	if err != nil {
		return nil, fmt.Errorf("serialize block header failed: %w", err)
	}

	// ä½¿ç”¨DoubleSHA256è®¡ç®—åŒºå—hashï¼ˆæ¯”ç‰¹å¸é£æ ¼ï¼‰
	blockHash := m.hashManager.DoubleSHA256(headerBytes)

	if len(blockHash) != 32 {
		return nil, fmt.Errorf("invalid block hash length: %d", len(blockHash))
	}

	return blockHash, nil
}

// computeTxHash è®¡ç®—äº¤æ˜“hash
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - txBytes: äº¤æ˜“åºåˆ—åŒ–åçš„å­—èŠ‚æ•°ç»„
//
// è¿”å›ï¼š
//   - []byte: äº¤æ˜“hashï¼ˆ32å­—èŠ‚ï¼‰
//   - error: è®¡ç®—é”™è¯¯
func (m *IndexRecoveryManager) computeTxHash(ctx context.Context, txBytes []byte) ([]byte, error) {
	if m.hashManager == nil {
		return nil, fmt.Errorf("hash manager not initialized")
	}

	if len(txBytes) == 0 {
		return nil, fmt.Errorf("transaction bytes is empty")
	}

	// ä½¿ç”¨SHA256è®¡ç®—äº¤æ˜“hash
	txHash := m.hashManager.SHA256(txBytes)

	if len(txHash) != 32 {
		return nil, fmt.Errorf("invalid tx hash length: %d", len(txHash))
	}

	return txHash, nil
}

// writeTxIndex å†™å…¥äº¤æ˜“ç´¢å¼•
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - txHash: äº¤æ˜“hashï¼ˆ32å­—èŠ‚ï¼‰
//   - block: åŒºå—å¯¹è±¡ï¼ˆç”¨äºè·å–é«˜åº¦å’Œè®¡ç®—åŒºå—hashï¼‰
//   - txIndex: äº¤æ˜“åœ¨åŒºå—ä¸­çš„ç´¢å¼•
//
// è¿”å›ï¼š
//   - error: å†™å…¥é”™è¯¯
func (m *IndexRecoveryManager) writeTxIndex(ctx context.Context, txHash []byte, block *core.Block, txIndex uint32) error {
	if m.store == nil {
		return fmt.Errorf("store not initialized")
	}

	if len(txHash) != 32 {
		return fmt.Errorf("invalid tx hash length: %d", len(txHash))
	}

	// è®¡ç®—åŒºå—hash
	blockHash, err := m.computeBlockHash(ctx, block)
	if err != nil {
		return fmt.Errorf("compute block hash failed: %w", err)
	}

	// ç¼–ç äº¤æ˜“ç´¢å¼•å€¼ï¼šblockHeight(8å­—èŠ‚) + blockHash(32å­—èŠ‚) + txIndex(4å­—èŠ‚)
	indexValue := make([]byte, 44)
	// ç¼–ç é«˜åº¦ï¼ˆå‰8å­—èŠ‚ï¼‰
	binary.BigEndian.PutUint64(indexValue[0:8], block.Header.Height)
	// ç¼–ç åŒºå—å“ˆå¸Œï¼ˆä¸­é—´32å­—èŠ‚ï¼‰
	copy(indexValue[8:40], blockHash)
	// ç¼–ç äº¤æ˜“ç´¢å¼•ï¼ˆå4å­—èŠ‚ï¼‰
	binary.BigEndian.PutUint32(indexValue[40:44], txIndex)

	// å†™å…¥äº¤æ˜“ç´¢å¼•ï¼ˆindices:tx:{txHash} â†’ indexValueï¼‰
	txKey := []byte(fmt.Sprintf("indices:tx:%x", txHash))
	if err := m.store.Set(ctx, txKey, indexValue); err != nil {
		return fmt.Errorf("set tx index failed: %w", err)
	}

	return nil
}
