// Package tx æä¾›äº¤æ˜“æŸ¥è¯¢æœåŠ¡çš„æµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•æ–‡ä»¶**
//
// æœ¬æ–‡ä»¶æµ‹è¯• TxQuery æœåŠ¡çš„æ ¸å¿ƒåŠŸèƒ½ï¼Œéµå¾ªæµ‹è¯•è§„èŒƒï¼š
// - docs/system/standards/principles/testing-standards.md
//
// ğŸ¯ **æµ‹è¯•è¦†ç›–**ï¼š
// - æœåŠ¡åˆ›å»º
// - äº¤æ˜“æŸ¥è¯¢
// - äº¤æ˜“åŒºå—é«˜åº¦æŸ¥è¯¢
// - è´¦æˆ·nonceæŸ¥è¯¢
package tx

import (
	"context"
	"encoding/binary"
	"fmt"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/persistence/query/interfaces"
	"github.com/weisyn/v1/internal/core/persistence/testutil"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"google.golang.org/protobuf/proto"
)

// ==================== æœåŠ¡åˆ›å»ºæµ‹è¯• ====================

// TestNewService_WithValidDependencies_ReturnsService æµ‹è¯•ä½¿ç”¨æœ‰æ•ˆä¾èµ–åˆ›å»ºæœåŠ¡
func TestNewService_WithValidDependencies_ReturnsService(t *testing.T) {
	// Arrange
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()

	// Act
	service, err := NewService(storage, fileStore, txHashClient, nil, logger)

	// Assert
	assert.NoError(t, err)
	assert.NotNil(t, service)
}

// TestNewService_WithNilStorage_ReturnsError æµ‹è¯•ä½¿ç”¨ nil storage åˆ›å»ºæœåŠ¡
func TestNewService_WithNilStorage_ReturnsError(t *testing.T) {
	// Arrange
	fileStore := testutil.NewTestFileStore()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()

	// Act
	service, err := NewService(nil, fileStore, txHashClient, nil, logger)

	// Assert
	assert.Error(t, err)
	assert.Nil(t, service)
	assert.Contains(t, err.Error(), "storage ä¸èƒ½ä¸ºç©º")
}

// ==================== äº¤æ˜“åŒºå—é«˜åº¦æŸ¥è¯¢æµ‹è¯• ====================

// TestGetTxBlockHeight_WithValidTxHash_ReturnsHeight æµ‹è¯•è·å–äº¤æ˜“åŒºå—é«˜åº¦
func TestGetTxBlockHeight_WithValidTxHash_ReturnsHeight(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()
	service, err := NewService(storage, fileStore, txHashClient, nil, logger)
	require.NoError(t, err)

	txHash := testutil.RandomHash()
	blockHeight := uint64(100)
	blockHash := testutil.RandomHash()
	txIndex := uint32(0)

	// åˆ›å»ºäº¤æ˜“ä½ç½®æ•°æ®ï¼ˆæ ¼å¼ï¼šblockHeight(8) + blockHash(32) + txIndex(4)ï¼‰
	locationData := make([]byte, 44)
	binary.BigEndian.PutUint64(locationData[0:8], blockHeight)
	copy(locationData[8:40], blockHash)
	binary.BigEndian.PutUint32(locationData[40:44], txIndex)

	txKey := []byte(fmt.Sprintf("indices:tx:%x", txHash))
	err = storage.Set(ctx, txKey, locationData)
	require.NoError(t, err)

	// Act
	height, err := service.GetTxBlockHeight(ctx, txHash)

	// Assert
	assert.NoError(t, err)
	assert.Equal(t, blockHeight, height)
}

// ==================== è´¦æˆ·nonceæŸ¥è¯¢æµ‹è¯• ====================

// TestGetAccountNonce_WithValidAddress_ReturnsNonce æµ‹è¯•è·å–è´¦æˆ·nonce
func TestGetAccountNonce_WithValidAddress_ReturnsNonce(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()
	service, err := NewService(storage, fileStore, txHashClient, nil, logger)
	require.NoError(t, err)

	address := testutil.RandomAddress()
	nonce := uint64(42)

	nonceBytes := make([]byte, 8)
	binary.BigEndian.PutUint64(nonceBytes, nonce)

	nonceKey := []byte(fmt.Sprintf("indices:nonce:%x", address))
	err = storage.Set(ctx, nonceKey, nonceBytes)
	require.NoError(t, err)

	// Act
	result, err := service.GetAccountNonce(ctx, address)

	// Assert
	assert.NoError(t, err)
	assert.Equal(t, nonce, result)
}

// TestGetAccountNonce_WithMissingNonce_ReturnsZero æµ‹è¯•ç¼ºå¤±nonceæ—¶è¿”å›0
func TestGetAccountNonce_WithMissingNonce_ReturnsZero(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()
	service, err := NewService(storage, fileStore, txHashClient, nil, logger)
	require.NoError(t, err)

	address := testutil.RandomAddress()

	// Act
	result, err := service.GetAccountNonce(ctx, address)

	// Assert
	assert.NoError(t, err)
	assert.Equal(t, uint64(0), result)
}

// ==================== åŒºå—æ—¶é—´æˆ³æŸ¥è¯¢æµ‹è¯• ====================

// TestGetBlockTimestamp_NewIndexFormat_LoadsFromFileStore
// âœ… å½»åº•è¿­ä»£éªŒæ”¶ï¼šindices:height å¿…é¡»ä¸ºæ–°æ ¼å¼ï¼Œä¸”ä» FileStore è¯»å–åŒºå—è¿”å› Header.Timestampã€‚
func TestGetBlockTimestamp_NewIndexFormat_LoadsFromFileStore(t *testing.T) {
	// Arrange
	ctx := context.Background()
	storage := testutil.NewTestBadgerStore()
	fileStore := testutil.NewTestFileStore()
	txHashClient := testutil.NewTestTransactionHashClient()
	logger := testutil.NewTestLogger()
	service, err := NewService(storage, fileStore, txHashClient, nil, logger)
	require.NoError(t, err)

	height := uint64(7)
	ts := int64(1700000000)
	filePath := "blocks/0000000000/0000000007.bin"

	block := &core.Block{
		Header: &core.BlockHeader{
			Height:    height,
			Timestamp: uint64(ts),
		},
		Body: &core.BlockBody{
			Transactions: nil,
		},
	}
	blockBytes, err := proto.Marshal(block)
	require.NoError(t, err)

	// å†™å…¥æ–‡ä»¶ç³»ç»Ÿï¼ˆMockFileStoreï¼‰
	require.NoError(t, fileStore.Save(ctx, filePath, blockBytes))

	// å†™å…¥é«˜åº¦ç´¢å¼•ï¼ˆæ–°æ ¼å¼ï¼šhash32 + pathLen + path + fileSizeï¼‰
	indexValue := make([]byte, 32+1+len(filePath)+8)
	copy(indexValue[0:32], testutil.RandomHash())
	indexValue[32] = byte(len(filePath))
	copy(indexValue[33:33+len(filePath)], []byte(filePath))
	binary.BigEndian.PutUint64(indexValue[33+len(filePath):33+len(filePath)+8], uint64(len(blockBytes)))

	heightKey := []byte(fmt.Sprintf("indices:height:%d", height))
	require.NoError(t, storage.Set(ctx, heightKey, indexValue))

	// Act
	got, err := service.GetBlockTimestamp(ctx, height)

	// Assert
	require.NoError(t, err)
	assert.Equal(t, ts, got)
}

// ==================== ç¼–è¯‘æ—¶æ£€æŸ¥ ====================

// ç¡®ä¿ Service å®ç°äº†æ¥å£
var _ interfaces.InternalTxQuery = (*Service)(nil)
