// Package writer å®ç°äº¤æ˜“ç´¢å¼•å†™å…¥é€»è¾‘
//
// ğŸ“‡ **äº¤æ˜“ç´¢å¼•å†™å…¥ (Transaction Index Writing)**
//
// æœ¬æ–‡ä»¶å®ç°äº¤æ˜“ç´¢å¼•çš„å†™å…¥é€»è¾‘ï¼Œä»åŒºå—ä¸­æå–äº¤æ˜“å¹¶åˆ›å»ºç´¢å¼•ã€‚
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// - ä»åŒºå—ä¸­æå–æ‰€æœ‰äº¤æ˜“
// - è®¡ç®—æ¯ç¬”äº¤æ˜“çš„å“ˆå¸Œ
// - å†™å…¥äº¤æ˜“ç´¢å¼•ï¼ˆåªå­˜å‚¨ç´¢å¼•ï¼Œä¸é‡å¤å­˜å‚¨äº¤æ˜“æ•°æ®ï¼‰
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - åªå­˜å‚¨ç´¢å¼•ï¼Œä¸é‡å¤å­˜å‚¨äº¤æ˜“æ•°æ®ï¼ˆäº¤æ˜“å·²è¢«åŒºå—åŒ…å«ï¼‰
// - ç´¢å¼•æ ¼å¼ï¼štxHash â†’ (blockHeight, txIndex)
package writer

import (
	"context"
	"encoding/binary"
	"fmt"

	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/writegate"
	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// writeTransactionIndices æ›´æ–°äº¤æ˜“ç´¢å¼•
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// ä»åŒºå—ä¸­æå–äº¤æ˜“ï¼Œåˆ›å»ºäº¤æ˜“ç´¢å¼•ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆç”¨äºäº¤æ˜“ç´¢å¼•ï¼‰
// 2. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// 3. è®¡ç®—æ¯ç¬”äº¤æ˜“çš„å“ˆå¸Œ
	// 4. å†™å…¥äº¤æ˜“ç´¢å¼•ï¼ˆindices:tx:{txHash} â†’ blockHeight(8å­—èŠ‚) + blockHash(32å­—èŠ‚) + txIndex(4å­—èŠ‚)ï¼‰
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - åªå­˜å‚¨ç´¢å¼•ï¼Œä¸é‡å¤å­˜å‚¨äº¤æ˜“æ•°æ®
// - äº¤æ˜“æ•°æ®å¯ä»¥ä»åŒºå—ä¸­æå–
// - ç´¢å¼•æ ¼å¼ï¼štxHash â†’ (blockHeight(8å­—èŠ‚) + blockHash(32å­—èŠ‚) + txIndex(4å­—èŠ‚))
func (s *Service) writeTransactionIndices(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	if s.blockHashClient == nil {
		return fmt.Errorf("blockHashClient æœªåˆå§‹åŒ–")
	}
	if s.txHashClient == nil {
		return fmt.Errorf("txHashClient æœªåˆå§‹åŒ–")
	}

	// 1. è®¡ç®—åŒºå—å“ˆå¸Œï¼ˆç”¨äºäº¤æ˜“ç´¢å¼•ï¼‰
	blockReq := &core.ComputeBlockHashRequest{
		Block: block,
	}
	blockResp, err := s.blockHashClient.ComputeBlockHash(ctx, blockReq)
	if err != nil {
		return fmt.Errorf("è®¡ç®—åŒºå—å“ˆå¸Œå¤±è´¥: %w", err)
	}

	if !blockResp.IsValid {
		return fmt.Errorf("åŒºå—ç»“æ„æ— æ•ˆ")
	}

	blockHash := blockResp.Hash

	// 2. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	transactions := block.Body.Transactions
	if transactions == nil {
		// å¦‚æœæ²¡æœ‰äº¤æ˜“ï¼Œç›´æ¥è¿”å›
		return nil
	}

	for i, txProto := range transactions {
		// 3. è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆä½¿ç”¨ gRPC æœåŠ¡ï¼‰
		txReq := &transaction.ComputeHashRequest{
			Transaction: txProto,
		}
		txResp, err := s.txHashClient.ComputeHash(ctx, txReq)
		if err != nil {
			return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}

		if !txResp.IsValid {
			return fmt.Errorf("äº¤æ˜“ %d ç»“æ„æ— æ•ˆ", i)
		}

		txHash := txResp.Hash

		// 4. ç¼–ç äº¤æ˜“ç´¢å¼•å€¼ï¼šblockHeight(8å­—èŠ‚) + blockHash(32å­—èŠ‚) + txIndex(4å­—èŠ‚)
		indexValue := make([]byte, 8+32+4)
		// ç¼–ç é«˜åº¦ï¼ˆå‰8å­—èŠ‚ï¼‰
		copy(indexValue[0:8], uint64ToBytes(block.Header.Height))
		// ç¼–ç åŒºå—å“ˆå¸Œï¼ˆä¸­é—´32å­—èŠ‚ï¼‰
		copy(indexValue[8:40], blockHash)
		// ç¼–ç äº¤æ˜“ç´¢å¼•ï¼ˆå4å­—èŠ‚ï¼‰
		binary.BigEndian.PutUint32(indexValue[40:44], uint32(i))

		// 5. å†™å…¥äº¤æ˜“ç´¢å¼•ï¼ˆindices:tx:{txHash} â†’ indexValueï¼‰
		// âœ… ä¿®å¤ P0-1ï¼šé”®æ ¼å¼å¿…é¡»ä¸æŸ¥è¯¢ä¸€è‡´ï¼Œæ·»åŠ  "indices:" å‰ç¼€
		txKey := fmt.Sprintf("indices:tx:%x", txHash)
		if err := tx.Set([]byte(txKey), indexValue); err != nil {
			return fmt.Errorf("å†™å…¥äº¤æ˜“ç´¢å¼•å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… äº¤æ˜“ç´¢å¼•å·²æ›´æ–°: height=%d, txCount=%d",
			block.Header.Height, len(transactions))
	}

	return nil
}

// deleteBlockTransactionIndices åˆ é™¤åŒºå—çš„äº¤æ˜“ç´¢å¼•ï¼ˆç”¨äºåˆ†å‰å¤„ç†ï¼‰
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼š
// åœ¨åˆ†å‰å¤„ç†æ—¶ï¼Œåˆ é™¤åŸä¸»é“¾åŒºå—çš„äº¤æ˜“ç´¢å¼•ï¼Œç¡®ä¿ç´¢å¼•ä¸€è‡´æ€§ã€‚
//
// ğŸ“‹ **å¤„ç†æµç¨‹**ï¼š
// 1. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
// 2. è®¡ç®—æ¯ç¬”äº¤æ˜“çš„å“ˆå¸Œ
// 3. åˆ é™¤å¯¹åº”çš„äº¤æ˜“ç´¢å¼•ï¼ˆindices:tx:{txHash}ï¼‰
//
// âš ï¸ **å…³é”®åŸåˆ™**ï¼š
// - åªåœ¨åˆ†å‰å¤„ç†æ—¶è°ƒç”¨ï¼Œç”¨äºæ¸…ç†åŸä¸»é“¾çš„äº¤æ˜“ç´¢å¼•
// - ä¸åˆ é™¤åŒºå—æ•°æ®æœ¬èº«ï¼ˆåŒºå—ä¿ç•™ç”¨äºå†å²æŸ¥è¯¢ï¼‰
// - ä¸å½±å“ UTXOï¼ˆUTXO ç”± UTXOSnapshot å¤„ç†ï¼‰
func (s *Service) deleteBlockTransactionIndices(ctx context.Context, tx storage.BadgerTransaction, block *core.Block) error {
	if s.txHashClient == nil {
		return fmt.Errorf("txHashClient æœªåˆå§‹åŒ–")
	}

	// 1. éå†åŒºå—ä¸­çš„æ‰€æœ‰äº¤æ˜“
	transactions := block.Body.Transactions
	if transactions == nil {
		// å¦‚æœæ²¡æœ‰äº¤æ˜“ï¼Œç›´æ¥è¿”å›
		return nil
	}

	for i, txProto := range transactions {
		// 2. è®¡ç®—äº¤æ˜“å“ˆå¸Œï¼ˆä½¿ç”¨ gRPC æœåŠ¡ï¼‰
		txReq := &transaction.ComputeHashRequest{
			Transaction: txProto,
		}
		txResp, err := s.txHashClient.ComputeHash(ctx, txReq)
		if err != nil {
			return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}

		if !txResp.IsValid {
			return fmt.Errorf("äº¤æ˜“ %d ç»“æ„æ— æ•ˆ", i)
		}

		txHash := txResp.Hash

		// 3. åˆ é™¤äº¤æ˜“ç´¢å¼•ï¼ˆindices:tx:{txHash}ï¼‰
		txKey := fmt.Sprintf("indices:tx:%x", txHash)
		if err := tx.Delete([]byte(txKey)); err != nil {
			return fmt.Errorf("åˆ é™¤äº¤æ˜“ç´¢å¼•å¤±è´¥ï¼ˆäº¤æ˜“ %dï¼‰: %w", i, err)
		}
	}

	if s.logger != nil {
		s.logger.Debugf("âœ… äº¤æ˜“ç´¢å¼•å·²åˆ é™¤: height=%d, txCount=%d",
			block.Header.Height, len(transactions))
	}

	return nil
}

// DeleteBlockTransactionIndices å®ç° DataWriter æ¥å£ï¼ˆåˆ é™¤åŒºå—çš„äº¤æ˜“ç´¢å¼•ï¼‰
//
// âœ… ä¿®å¤ P0-3ï¼šåˆ†å‰å¤„ç†æ—¶åˆ é™¤åŸä¸»é“¾çš„äº¤æ˜“ç´¢å¼•
func (s *Service) DeleteBlockTransactionIndices(ctx context.Context, block *core.Block) error {
	if err := writegate.Default().AssertWriteAllowed(ctx, "persistence.DataWriter.DeleteBlockTransactionIndices"); err != nil {
		return err
	}
	// åœ¨äº‹åŠ¡ä¸­åˆ é™¤äº¤æ˜“ç´¢å¼•
	return s.storage.RunInTransaction(ctx, func(tx storage.BadgerTransaction) error {
		return s.deleteBlockTransactionIndices(ctx, tx, block)
	})
}

